# VerMagic

./: README.md  pyproject.toml  requirements.txt
src/verintmagic/: magic.py
