[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VerMagic"
version = "0.0.1"
authors = [
  { name="Chema Hidalgo-Lopez", email="chema.hl@gmail.com" },
]
description = "A small package for ETL of NGS data and plotting"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jhidalgo-lopez/VerMagic"
"Bug Tracker" = "https://github.com/jhidalgo-lopez/VerMagic/issues"