[tool.poetry]
name = "vermagic"
version = "0.1.0"
description = "A small package for ETL of NGS data and plotting."
authors = ["Jose Manuel Hidalgo-Lopez <chema.hl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
plotnine = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
